Accept new features USE_PAGE_CRYPTO, USE_PAGE_HASH, parametrize paging.c
Update linux_wrap to compile under C11

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,3 +42,12 @@ jobs:
     - stage: USE_PAGING
       script:
         - ./build.sh paging
+    - stage: USE_PAGE_CRYPTO
+      script:
+        - ./build.sh paging page_crypto
+    - stage: USE_PAGE_HASH
+      script:
+        - ./build.sh paging page_hash
+    - stage: USE_PAGE_CRYPTO + USE_PAGE_HASH
+      script:
+        - ./build.sh paging page_crypto page_hash
